openshift-ressources/customer-self-service-backend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customer-self-service-backend
  name: customer-self-service-backend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: customer-self-service-backend
    deploymentconfig: customer-self-service-backend
  sessionAffinity: None
  type: ClusterIP
