openshift-ressources/customer-self-service-backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: customer-self-service-backend
  name: customer-self-service-backend
spec:
  host: customer-self-service-backend-lakeside-mutual.apps.cluster-paris-3e9b.paris-3e9b.example.opentlc.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: customer-self-service-backend
    weight: 100
  wildcardPolicy: None
